fix with japanese language top navbar is too large when browser width <978px

--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -766,8 +766,8 @@ a.v_highlight_more {
     font-size: 40px;
   }
   .navbar-default .navbar-nav>li>a {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 14px;
+    padding-right: 14px;
   }
 }
 
